Basic gzip, arc and warc modules. Cleanup required later.